@@ -18,3 +18,4 @@ Bug fixes
  * The "unsaved changes" confirmation was erroneously shown on IE / Firefox when previewing a page with validation errors (Matt Westcott)
  * The up / down / delete controls on the "Promoted search results" form no longer trigger a form submission (Matt Westcott)
  * Opening preview window no longer performs user-agent sniffing, and now works correctly on IE11 (Matt Westcott)
+ * Tree paths are now correctly assigned when previewing a newly-created page underneath a parent with deleted children (Matt Westcott)
